--- a/_config.yml
+++ b/_config.yml
@@ -308,7 +308,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: #true
+      comments: true
       share: true
       related: true
 
