--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ name                     : "Mrityunjay Bhardwaj"
 description              : "A place to share what i've learned so far"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : mrityunjaybhardwaj/MrityunjayBhardwaj.github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true #false , false (default)
 words_per_minute         : 200
@@ -104,7 +104,7 @@ analytics:
 # Site Author
 author:
   name             : "Mrityunjay Bhardwaj"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/imgs/site_imgs/MRI_brain.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I Love Learning New Things!"
   location         : "Rajasthan,India"
   email            : "mrityunjaybhardwaj99@gmail.com"
