--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ about-author: I love learning New things.
 # Contact links
 email: # Add your Email address
 phone: # Add your Phone number
-website: # Add your website, do not add http://
+website: mrityunjay.ml # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: MrityunjayBhardwaj # Add your Github handle
 twitter: '@mrityunjay_99' # Add your Twitter handle
