--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My personal blog - Adam Neilson
+title: My personal blog - Mrityunjay Bhardwaj
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -16,7 +16,7 @@ about-author: I love learning New things.
 # Contact links
 email: # Add your Email address
 phone: # Add your Phone number
-website: MrityunjayBhardwaj.github.io # Add your website, do not add http://
+website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 github: MrityunjayBhardwaj # Add your Github handle
 twitter: '@mrityunjay_99' # Add your Twitter handle
@@ -28,7 +28,7 @@ pinterest: # Add your Pinterest handle
 mailchimp: # Add your MailChimp form identifier.
 
 # Disqus
-discus_identifier: mr-brown # Add your discus identifier
+discus_identifier: https-mrityunjaybhardwaj-github-io # Add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
